--- a/src/scss/Typography.scss
+++ b/src/scss/Typography.scss
@@ -37,7 +37,7 @@ html {
   color: $white;
 }
 
-h1{
+h1 {
   font-family: "Neue Plak Extended", sans-serif;
   font-size: 3.6rem;
   line-height: 4.4rem;
@@ -45,13 +45,14 @@ h1{
 
 h2 {
   font-family: "NB International Pro", sans-serif;
-  padding: 0.6rem 0.8rem;
+  padding: 0.3rem;
   font-size: 2rem;
   color: $black;
   background-color: $white;
   display: inline;
   letter-spacing: 0.02em;
-  line-height: 3.1rem;
+  line-height: 2.5rem;
+  box-decoration-break: clone;
 }
 
 h3 {
@@ -70,7 +71,7 @@ h4 {
 
 p {
   font-family: "NB International Mono", sans-serif;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   line-height: 1.5rem;
   color: $white;
 }
@@ -78,6 +79,7 @@ p {
 a {
   color: $white;
   text-decoration: none;
+  vertical-align: text-top;
 }
 
 a:hover {
